# fluid_simulation_framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  authors
app/: CMakeLists.txt  bf_vs_lib_NBS_compare.awk  compare_main.cpp  kernel_interpolation.cpp  main.cpp  mesh.sh  particle_density_stats.awk  run_adhesion.sh  run_border_cone.sh  run_recon.sh  run_sim.sh  run_sim_EXP.sh  run_sim_PBF.sh  run_sim_huge.sh  run_sim_recon.sh  run_surface_construct.sh  test_acceleration.cpp  test_adhesion.cpp  test_border_box.cpp  test_border_cone.cpp  test_cereal.cpp  test_double_dam.cpp  test_fluid_box.cpp  test_fluid_box_with_border.cpp  test_frugally_deep.cpp  test_marching_cubes.cpp  test_recon.cpp  test_sim.cpp  test_sim_EXP.cpp  test_sim_PBF.cpp  test_sim_recon.cpp  test_surface_reconstruction.cpp  test_time_integrator.cpp  test_vtk_reader.cpp  test_wavefront_parser.cpp
assignments/ass1/: brut-force-vs-compactSupport-NS.ods  task5c-fixed.ods  task5c-sml_0.6.ods  task5c-sml_6.7.ods  task5c-sml_7.ods
configs/: fluid_box.config
glad/: CMakeLists.txt  glad.c  glad.h
include/: NBsearch.hpp  blocking_queue.h  data_set.h  kernel.h  marching_cubes.h  marching_cubes_lut.hpp  particle_sampler.h  shader.h  solver.h  storage.h  triangle_table.h  types.hpp  vtk_writer.h
learnSPH/: CMakeLists.txt  NBsearch.cpp  data_set.h  kernel.cpp  kernel.h  marching_cubes.cpp  particle_sampler.cpp  particle_sampler.h  solver.cpp  solver.h  types.hpp
learnSPH/core/: PerfStats.cpp  PerfStats.hpp  cereal_writer.hpp  kernel.cpp  kernel.h  particle_sampler.cpp  particle_sampler.h  storage.h  vtk_writer.cpp  vtk_writer.h
learnSPH/simulation/: solver.cpp  solver.h
learnSPH/surf_reconstr/: BlurredReconstruction.hpp  DNNReconstruction.hpp  MinDistReconstruction.hpp  MlsReconstruction.hpp  MullerEtAlReconstruction.hpp  NaiveMarchingCubes.cpp  NaiveMarchingCubes.hpp  OnderikEtAlReconstruction.cpp  OnderikEtAlReconstruction.hpp  SolenthalerReconstruction.cpp  SolenthalerReconstruction.hpp  SolenthilerReconstruction.cpp  SolenthilerReconstruction.hpp  SurfaceReconstructor.hpp  TestNaiveMCWithSFSmoothing.hpp  ZhuBridsonBlured.hpp  ZhuBridsonReconstruction.cpp  ZhuBridsonReconstruction.hpp  marching_cubes.h  marching_cubes_deprecated.cpp  marching_cubes_deprecated.h
learnSPH/surf_reconstr/logs/: experiments_log.tex
learnSPH/util/: vtk_writer.cpp
models/: terrain_bunny_teapot.blend
modules/: FindOpenCV.cmake
openglApps/: CMakeLists.txt  fragment.glsl  marching_cubes_vis.cpp  shader.h  texture.hpp  vertex.glsl
scripts/: RunParametrisedSimulations.sh  checkKernelIterations.cpp  distributionFunction.cpp
scripts/cnn/: cnn_for_surface_reconstruction.ipynb
scripts/cnn/.ipynb_checkpoints/: cnn_for_surface_reconstruction-checkpoint.ipynb
tests/: CMakeLists.txt  sample_tests.cpp
